@@ -4,9 +4,6 @@ environment:
   matrix:
     - PYTHON: C:\Python27
     - PYTHON: C:\Python27-x64
-    - PYTHON: C:\Python34
-    - PYTHON: C:\Python34-x64
-      DISTUTILS_USE_SDK: '1'
     - PYTHON: C:\Python35
     - PYTHON: C:\Python35-x64
     - PYTHON: C:\Python36
