@@ -1,6 +1,6 @@
 [tox]
 # toxworkdir = /data1/DATA/tox/ruamel.yaml 
-envlist = cs,py37,py27,py36,py35,py34,py38,pypy,py27m
+envlist = cs,py37,py27,py36,py35,py38,pypy,py27m
 
 [testenv]
 commands =
